--- a/sofi/css/estil.css
+++ b/sofi/css/estil.css
@@ -40,16 +40,21 @@ abstract {
     background: white;
     color: black;
     display: block;
-    padding: 1em 2em 2em 2em;
+    padding: 1em 1.2em 2em 1.2em;
     border-radius: 4px;
-    box-shadow: inset 0px 1px 2px 0px rgba(60,64,67,0.3), inset 0px 2px 6px 2px rgba(60,64,67,0.15);
-
+    /* box-shadow: inset 0px 1px 2px 0px rgba(60,64,67,0.3), inset 0px 2px 6px 2px rgba(60,64,67,0.15); */
+}
+@media(min-width: 480px){
+    abstract {
+        padding: 1em 2em 2em 2em;
+    }
 }
 
 
 table {
     /* border: 1px solid #a1a1a1; */
     border-collapse: collapse;
+    table-layout: fixed;
 }
 
 table th:first-child {
@@ -336,6 +341,7 @@ url {
     border-radius: 8px;
     padding: .3em .8em;
     white-space: nowrap;
+    background-color: white;
 }
 
 file, directory {
@@ -343,7 +349,7 @@ file, directory {
     font-size: .9em;
     background-color: #f5f7ab6a;
     color: #333;
-    padding: .1em .5em;
+    padding: .2em .5em;
     margin: .3em;
     white-space: nowrap;
     border-radius: 4px;
@@ -485,32 +491,42 @@ check::before {
 
 
 
-work, warn, info, optional, tldr, observe, question, quizz, challenge, project {
+work, warn, info, optional, tldr, observe, quizz, challenge, project {
     display: block;
     position: relative;
     /* border-radius: 4px; */
-    border-radius: 0px 4px 4px 0px;
-    border: 1px solid #d8dee9;
-    border-left-width: 4px;
-    padding: 0 2em;
+    border-radius: 4px; 
+    /* border: 1px solid transparent; */
+    border-left: 4px solid;
+    padding: .4em 1.2em;
     margin: 2em 0;
+}
+
+@media(min-width: 480px){
+    work, warn, info, optional, tldr, observe, quizz, challenge, project {
+        padding: .4em 2em;
+    }
 }
 
 work::before, warn::before, info::before, optional::before, tldr::before, observe::before, question::before, quizz::before, challenge::before, project::before {
     position: absolute;
-    top: -.8em;
-    left: -.9em;
+    top: 0;
+    left: 0;
+    transform: translate(-55%, -55%);
     color: #fff;
     width: 1.6em;
     height: 1.6em;
     border-radius: 50%;
     text-align: center;
+    font-size: 0.6em;
+    padding: 4px;
     line-height: 1.6;
 }
 
 
 work {
     border-left-color: #189E49;
+    background-color: #e3f4e9;
 }
 
 work::before {
@@ -521,17 +537,18 @@ work::before {
 
 warn {
     border-left-color: #f66;
+    background: #ffeded;
 }
 
 warn::before {
     font-family: 'FASolid';
     content: '\f12a';
     background: #f66;
-    font-weight: bold;
 }
 
 info {
     border-left-color:  #77CAE0;
+    background: #e7ecf3;
 }
 
 info::before {
@@ -541,6 +558,7 @@ info::before {
 
 optional {
     border-left-color: #FFA700;
+    background-color: #fff3dc;
 }
 
 optional::before {
@@ -550,6 +568,7 @@ optional::before {
 
 observe {
     border-left-color: #2BD7E3;
+    background-color: #e3fafc;
 }
 
 observe::before {
@@ -563,18 +582,24 @@ tldr {
     border-left-color: #a8aea9;
 }
 
-question {
+/* question {
     border-left-color: #f9bc60;
+    background-color: white;
+    
 }
 
 question::before {
     font-family: 'FASolid';
     content: '\f128';
     background-color: #f9bc60;
-}
+} */
 
 quizz {
+    border-top: 1px solid #f9bc60;
+    border-bottom: 1px solid #f9bc60;
+    border-right: 1px solid #f9bc60;
     border-left-color: #f9bc60;
+    background-color: white;
 }
 
 quizz::before {
@@ -585,6 +610,7 @@ quizz::before {
 
 challenge {
     border-left-color: #1E8E3E;
+    background-color: #e3f4e9;
 }
 
 challenge::before {
@@ -608,9 +634,9 @@ project::before {
 
 
 quizz question {
+    display: block;
     border: none;
     margin: 0;
-    padding: 0;
 }
 
 quizz question::before {
@@ -619,37 +645,21 @@ quizz question::before {
 }
 
 quizz question + question {
+    margin: 0;
     border-top: 1px solid #d8dee9;
     /* padding-top: 1em; */
 }
 
-statement {
-    margin: 1em 0;
-}
-
-
-
-
-
-
-/* question {
-    display: block;
-    border: 1px solid #efeece;
-    padding: 1em;
-    border-radius: 8px 8px 0 0;
-    margin-bottom: 1em;
-} */
 
 question statement {
     display: block;
     margin-bottom: 1em;
+    padding: 1em 0;
 }
 
 question o {
     display: flex;
-    align-items: center;
     margin: 0;
-    padding-left: 2em;
 }
 
 question o + o {
@@ -658,7 +668,6 @@ question o + o {
 
 question o label {
     display: inline-flex;
-    align-items: center;
     flex-grow: 1;
     margin: 0;
     padding: 0;
@@ -668,11 +677,15 @@ question o:hover {
     background: #f9bc6084;
 }
 
-question label {
+question label::before {
+    content: "";
+    width: 1em;
+    display: table;
+    clear: both;
 }
 
 question input + label::before {
-    padding-right: 1em;
+    padding-right: .8em;
 }
 
 question input[type=radio] + label::before {
@@ -701,11 +714,12 @@ question o.was-correct {
 }
 
 question o::before {
-    display: inline-block;
-    padding-right: 1em;
-    width: 1em;
-    content: ' ';
+    display: table;
+    width: 1.6em;
+    clear: both;
+    content: '';
     font-family: 'FASolid';
+    text-align: center;
 }
 
 question o.right::before {
@@ -731,6 +745,8 @@ question input[type=radio],[type=checkbox] {
     display: none;
 }
 
+
+
 question button.check {
     display: block;
     background-color: #0e73ee;
@@ -746,6 +762,9 @@ question button::before {
     font-family: 'FASolid';
     content: '\f00c';
 }
+
+
+
 
 
 question[match] div {
@@ -768,8 +787,6 @@ question[match] o::before {
 question[match] div.left o {
     text-align: right;
 }
-
-
 
 question[match] div.right o {
     cursor: grab;
@@ -801,7 +818,7 @@ question[match] o.highlight {
     background: #e1e1e1;
 }
 
-o div.code-toolbar {
+o label > div {
     display: inline-block;
     flex-grow: 1;
 }
@@ -844,6 +861,7 @@ sidenav {
     display: block;
     height: 100%;
     width: 0;
+    max-width: 0;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -851,7 +869,7 @@ sidenav {
     background-color: #111;
     overflow-x: hidden;
     overflow-y: auto;
-    transition: 0.3s;
+    transition: max-width .8s;
     padding-top: 60px;
     border-bottom: 1px solid gray;
     width: 0;
@@ -859,6 +877,7 @@ sidenav {
 
 sidenav.open {
     width: auto;
+    max-width: 100%;
 }
 
 hamb-close {
@@ -873,10 +892,21 @@ hamb-close::before {
     content: '\00d7';
 }
 
-sidenav a {
+sidenav a.sidenav1 {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
+    color: #949494;
+    display: block;
+    transition: 0.3s;
+    width: 300px;
+    line-height: 1.2;
+}
+
+sidenav a.sidenav2 {
+    padding: 8px 8px 8px 40px;
+    text-decoration: none;
+    font-size: 20px;
     color: #818181;
     display: block;
     transition: 0.3s;
