--- a/fragments/index.html
+++ b/fragments/index.html
@@ -4,6 +4,7 @@
 <script type="module" src="/sofi/js/script.js"></script>
 <link rel="stylesheet" href="/sofi/css/estil.css">
 
+<nav></nav>
 <header>
     <h1>Fragments</h1>
 
