--- a/fragments/index.html
+++ b/fragments/index.html
@@ -184,7 +184,7 @@
     <codefile>
         res/layout/activity_main.xml
     </codefile>
-    <code xml>
+    <code xml data-line="8-14">
         &lt;?xml version=&#34;1.0&#34; encoding=&#34;utf-8&#34;?&gt;
         &lt;androidx.constraintlayout.widget.ConstraintLayout
             xmlns:android=&#34;http://schemas.android.com/apk/res/android&#34;
