--- a/fragments/index.html
+++ b/fragments/index.html
@@ -402,7 +402,7 @@
         public class Onboarding1Fragment extends Fragment {
 
             @Override
-            public View onCreateView(LayoutInflater inflater, ViewGroup container,
+            public View onCreateView(@NonNull LayoutInflater inflater, ViewGroup container,
                                         Bundle savedInstanceState) {
                 return inflater.inflate(R.layout.fragment_onboarding1, container, false);
             }
@@ -417,7 +417,7 @@
                 private FragmentOnboarding1Binding binding;
             
                 @Override
-                public View onCreateView(LayoutInflater inflater, ViewGroup container,
+                public View onCreateView(@NonNull LayoutInflater inflater, ViewGroup container,
                                             Bundle savedInstanceState) {
                     return (binding = FragmentOnboarding1Binding.inflate(inflater, container, false)).getRoot();
                 }
@@ -448,7 +448,7 @@
         public class Onboarding1Fragment extends Fragment {
 
             @Override
-            public View onCreateView(LayoutInflater inflater, ViewGroup container,
+            public View onCreateView(@NonNull LayoutInflater inflater, ViewGroup container,
                                         Bundle savedInstanceState) {
                 return inflater.inflate(R.layout.fragment_onboarding1, container, false);
             }
@@ -483,7 +483,7 @@
             Button botonSiguiente;
 
             @Override
-            public View onCreateView(LayoutInflater inflater, ViewGroup container,
+            public View onCreateView(@NonNull LayoutInflater inflater, ViewGroup container,
                                         Bundle savedInstanceState) {
                 return inflater.inflate(R.layout.fragment_onboarding2, container, false);
             }
@@ -514,7 +514,7 @@
             Button botonSiguiente;
 
             @Override
-            public View onCreateView(LayoutInflater inflater, ViewGroup container,
+            public View onCreateView(@NonNull LayoutInflater inflater, ViewGroup container,
                                         Bundle savedInstanceState) {
                 return inflater.inflate(R.layout.fragment_onboarding2, container, false);
             }
@@ -557,7 +557,7 @@
                     NavController navController;
 
                     @Override
-                    public View onCreateView(LayoutInflater inflater, ViewGroup container,
+                    public View onCreateView(@NonNull LayoutInflater inflater, ViewGroup container,
                                                 Bundle savedInstanceState) {
                         return inflater.inflate(R.layout.fragment_onboarding2, container, false);
                     }
@@ -595,7 +595,7 @@
                     NavController navController;
 
                     @Override
-                    public View onCreateView(LayoutInflater inflater, ViewGroup container,
+                    public View onCreateView(@NonNull LayoutInflater inflater, ViewGroup container,
                                                 Bundle savedInstanceState) {
                         return inflater.inflate(R.layout.fragment_onboarding2, container, false);
                     }
@@ -638,7 +638,7 @@
             NavController navController;
 
             @Override
-            public View onCreateView(LayoutInflater inflater, ViewGroup container,
+            public View onCreateView(@NonNull LayoutInflater inflater, ViewGroup container,
                                         Bundle savedInstanceState) {
                 return inflater.inflate(R.layout.fragment_onboarding2, container, false);
             }
